# custom_codecarbon

./: README.md  pyproject.toml
codecarbon/: emissions_tracker.py
